# unshield

./: .appveyor-linux.yml  .appveyor-windows.yml  .cvsignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Dockerfile  LICENSE  Makefile.am  README  README.md  TODO  appveyor.yml  autogen.sh  bootstrap  configure.ac  configure.ac.in  cvsclean  libunshield.pc.in  osx.c  rebuild.cmd  rebuild.sh  run-tests.sh  travis.md  unshield.m4  unshield.spec.in  valgrind.sh
.github/: travis_windows_mingw.bat  travis_windows_msvc.bat
.github/workflows/: cmake-windows.yml  cmake.yml  codeql-analysis.yml
lib/: .cvsignore  CMakeLists.txt  Makefile.am  bswap.c  cabfile.h  component.c  converter.c  directory.c  file.c  file_group.c  helper.c  internal.h  libunshield.c  libunshield.h  log.c  log.h  pendian_detect.h  unshield.c  unshield.h  unshield_config.h.in  unshield_internal.h
lib/convert_utf/: CMakeLists.txt  Makefile.am  README.google  README.unshield
lib/md5/: .cvsignore  CMakeLists.txt  Makefile.am  global.h  md5.h  md5c.c
lib/miniz/: CMakeLists.txt  miniz.c  miniz.h  miniz4unshield.sh
lib/unistd/: getopt.c  unistd.h
lib/zlib/: CMakeLists.txt  zlib2unshield.sh
m4/: check_ssl.m4  libsynce.m4
man/: Makefile.am  unshield.1
src/: .cvsignore  CMakeLists.txt  Makefile.am  unshield-afl.c  unshield-deobfuscate.c  unshield.c
test/: CMakeLists.txt  functions.sh  md5sum.cmake
test/bugs/debian-776238/: data1.cab  data1.hdr  debian-776238.sh
test/bugs/debian-776239/: data1.hdr
test/v0/: avigomanager.md5  avigomanager.sh  baldurs_gate_patch_v1_1_4315_international.sh  the-feeble-files-spanish.md5  the-feeble-files-spanish.sh  wireplay.md5  wireplay.sh
test/v0/avigomanager/: CMakeLists.txt
test/v0/baldurs_gate_patch_v1_1_4315_international/: CMakeLists.txt  baldurs_gate_patch_v1_1_4315_international.md5
test/v0/the-feeble-files-spanish/: CMakeLists.txt
test/v0/wireplay/: CMakeLists.txt
test/v5-CVE-2015-1386/: CVE-2015-1386.sh
test/v5/CVE-2015-1386/: CMakeLists.txt  CVE-2015-1386.sh  data1.cab  data1.hdr
test/v5/stack_memory_file/: CMakeLists.txt  test_stack_memory_file.c
win32/: getopt.h
win32_msvc/: fnmatch.h  getopt.h  unistd.h
